# uwu

./: README.md  package-lock.json
crates/parser/: Cargo.toml  foo.js
crates/parser/src/: main.rs
crates/uwu-cli/: README.md
lib/: build.js  index.ts
svelte/: README.md  package-lock.json  package.json  rollup.config.js
svelte/src/: App.svelte  UWU.svelte  uwu.js
