[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc = "0.99.0"
swc_common = { version = "0.15.1", features = ["tty-emitter"] }
swc_ecma_parser = "0.82.5"
swc_ecma_ast = "0.60.0"